@@ -16,11 +16,9 @@
 	 (stream (swank::connection.socket-io conn))
 	 (clone (swank-backend:dup (swank-backend:socket-fd stream)))
 	 (style (swank::connection.communication-style conn))
-	 (coding (swank::connection.coding-system conn))
 	 (repl (if (swank::connection.user-io conn) t))
 	 (args (list "--swank-fd" (format nil "~d" clone)
 		     "--swank-style" (format nil "~s" style)
-		     "--swank-coding" (format nil "~s" coding)
 		     "--swank-repl" (format nil "~s" repl))))
     (swank::close-connection conn nil nil)
     (swank-backend:exec-image image-file args)))
@@ -49,13 +47,12 @@
   (format *error-output* "args: ~s~%" (command-line-args))
   (let* ((fd (read-command-line-arg "--swank-fd"))
 	 (style (read-command-line-arg "--swank-style"))
-	 (coding (read-command-line-arg "--swank-coding"))
 	 (repl (read-command-line-arg "--swank-repl"))
-	 (* (format *error-output* "fd=~s style=~s cs=~s~%" fd style coding))
-	 (stream (make-fd-stream fd (find-external-format-or-lose coding)))
-	 (connection (make-connection nil stream style  coding)))
+	 (* (format *error-output* "fd=~s style=~s~%" fd style))
+	 (stream (make-fd-stream fd nil))
+	 (connection (make-connection nil stream style)))
     (let ((*emacs-connection* connection))
-      (when repl (create-repl nil))
+      (when repl (swank::create-repl nil))
       (background-message "~A" "Lisp image restored"))
     (serve-requests connection)
     (simple-repl)))
@@ -66,3 +63,5 @@
     (read-from-string (elt args (1+ pos)))))
 
 (in-package :swank-snapshot)
+
+(provide :swank-snapshot)
