@@ -1,3 +1,12 @@
+2012-03-06  Helmut Eller  <heller@common-lisp.net>
+
+	Add missing provide.
+
+	* swank-repl.lisp
+	* swank-util.lisp
+	* swank-mrepl.lisp
+	* swank-snapshot.lisp
+
 2012-03-06  Stas Boukarev  <stassats@gmail.com>
 
 	* slime-package-fu.el (slime-export-save-file): New variable, when
